--- a/www/index.html
+++ b/www/index.html
@@ -188,7 +188,7 @@ function showPage() {
 <div data-role="page" id="pageone">
 	<div data-role="header">
     <i class="fa fa-plus-square" style="font-size:48px;color:red"></i>  
-	<h1>Health-care Facilities Locator</h1>
+	<h1>Health-care <br>Facilities Locator</h1>
 	</div>
 	<form>
 		<p>Select 
